# jsut-recorder

./: .gitignore  README.md  app.py  flake.nix  hello.py  pyproject.toml  ruby.py  voiceactress100.csv  voiceactress100_with_ruby.csv
src/: spectrogram.py
src/recorder/: device_checker.py  recorder.py  recorder2.py
