[project]
name = "jsut-recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.44.1",
    "matplotlib>=3.9.4",
    "scipy>=1.13.1",
    "jaconv>=0.4.0",
    "mecab-python3>=1.0.10",
    "pykakasi>=2.3.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.12.1",
    "unidic-lite>=1.0.8",
    "wrapt>=1.17.0",
]
